; ModuleID = '/home/carl/AnghaBench/freebsd/crypto/openssh/extr_channels.c_open_listen_match_streamlocal.c'
source_filename = "/home/carl/AnghaBench/freebsd/crypto/openssh/extr_channels.c_open_listen_match_streamlocal.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.permission = type { i64, i32*, i32* }

@PORT_STREAMLOCAL = common dso_local global i64 0, align 8
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.permission*, i8*)* @open_listen_match_streamlocal to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @open_listen_match_streamlocal(%struct.permission* %0, i8* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.permission*, align 8
  %5 = alloca i8*, align 8
  store %struct.permission* %0, %struct.permission** %4, align 8
  store i8* %1, i8** %5, align 8
  %6 = load %struct.permission*, %struct.permission** %4, align 8
  %7 = getelementptr inbounds %struct.permission, %struct.permission* %6, i32 0, i32 2
  %8 = load i32*, i32** %7, align 8
  %9 = icmp eq i32* %8, null
  br i1 %9, label %10, label %11

10:                                               ; preds = %2
  store i32 0, i32* %3, align 4
  br label %32

11:                                               ; preds = %2
  %12 = load %struct.permission*, %struct.permission** %4, align 8
  %13 = getelementptr inbounds %struct.permission, %struct.permission* %12, i32 0, i32 0
  %14 = load i64, i64* %13, align 8
  %15 = load i64, i64* @PORT_STREAMLOCAL, align 8
  %16 = icmp ne i64 %14, %15
  br i1 %16, label %17, label %18

17:                                               ; preds = %11
  store i32 0, i32* %3, align 4
  br label %32

18:                                               ; preds = %11
  %19 = load %struct.permission*, %struct.permission** %4, align 8
  %20 = getelementptr inbounds %struct.permission, %struct.permission* %19, i32 0, i32 1
  %21 = load i32*, i32** %20, align 8
  %22 = icmp eq i32* %21, null
  br i1 %22, label %30, label %23

23:                                               ; preds = %18
  %24 = load %struct.permission*, %struct.permission** %4, align 8
  %25 = getelementptr inbounds %struct.permission, %struct.permission* %24, i32 0, i32 1
  %26 = load i32*, i32** %25, align 8
  %27 = load i8*, i8** %5, align 8
  %28 = call i64 @strcmp(i32* %26, i8* %27)
  %29 = icmp ne i64 %28, 0
  br i1 %29, label %30, label %31

30:                                               ; preds = %23, %18
  store i32 0, i32* %3, align 4
  br label %32

31:                                               ; preds = %23
  store i32 1, i32* %3, align 4
  br label %32

32:                                               ; preds = %31, %30, %17, %10
  %33 = load i32, i32* %3, align 4
  ret i32 %33
}

declare dso_local i64 @strcmp(i32*, i8*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
